src/objects/Interested_Party__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interested Parties</relationshipLabel>
        <relationshipName>Interested_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Divert_Code__c</fullName>
        <label>Divert Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interested Parties</relationshipLabel>
        <relationshipName>Interested_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Interested Parties</relationshipLabel>
        <relationshipName>Interested_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interested_Party_Id__c</fullName>
        <externalId>true</externalId>
        <label>Interested Party Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interested_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <formula>LEFT( Zip12__c , 5) + &apos;-&apos; + MID( Zip12__c , 6, 4) + &apos;-&apos; + RIGHT( Zip12__c , 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <formula>Financial_Account__r.Plan_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power of Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Confirms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Confirms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receives_1099__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receives 1099</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receives_Confirms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receives Confirms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_No__c</fullName>
        <formula>Financial_Account__r.Rep__r.Rep_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Interested Parties</relationshipLabel>
        <relationshipName>Interested_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_12_Months__c</fullName>
        <formula>Financial_Account__r.T12_Fees_Comm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T-12 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T_12_Trades__c</fullName>
        <formula>Financial_Account__r.T_12_Trades__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T12 Trades</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Acct_Value__c</fullName>
        <formula>Financial_Account__r.Total_Acct_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Acct Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trading_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trading Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Year_Performance__c</fullName>
        <formula>Financial_Account__r.FinServ__Performance1Yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Year Performance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zip12__c</fullName>
        <label>Zip12</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ship_address1__c</fullName>
        <label>IP Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ship_address2__c</fullName>
        <label>IP Address2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ship_address3__c</fullName>
        <label>IP Address3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Interested Party</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interested Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interested Parties</pluralLabel>
    <recordTypes>
        <fullName>Entity</fullName>
        <active>true</active>
        <label>Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>